# SPE-1K-FA-Control

./: CLAUDE.md  CMakeLists.txt  README.md  entitlements.plist
.github/workflows/: release.yml
assets/: AppIcon.icns
src/: main.cpp
src/connection/: AbstractConnection.cpp  AbstractConnection.h  SerialConnection.cpp  SerialConnection.h  TcpConnection.cpp  TcpConnection.h
src/controller/: AmplifierController.cpp  AmplifierController.h
src/logging/: TelemetryLogger.cpp  TelemetryLogger.h
src/protocol/: CommandBuilder.h  Protocol.h  StatusPacket.cpp  StatusPacket.h
src/ui/: AlarmHistoryDialog.cpp  AlarmHistoryDialog.h  CompactWindow.cpp  CompactWindow.h  ConnectionDialog.cpp  ConnectionDialog.h  MainWindow.cpp  MainWindow.h
src/ui/widgets/: LedIndicator.cpp  LedIndicator.h  MeterWidget.cpp  MeterWidget.h
